--- a/index.html
+++ b/index.html
@@ -3,26 +3,96 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>BabyMath</title>
+    <title>Subjects and Links</title>
     <style>
+        body {
+            font-family: Arial, sans-serif;
+            margin: 0;
+            padding: 0;
+            background-color: #f4f7fc;
+            color: #333;
+        }
+
+        h1 {
+            text-align: center;
+            padding: 20px;
+            background-color: #4CAF50;
+            color: white;
+            margin: 0;
+        }
+
+        #subjects {
+            display: flex;
+            justify-content: center;
+            gap: 20px;
+            margin-top: 30px;
+        }
+
+        .subject-btn {
+            background-color: #4CAF50;
+            color: white;
+            padding: 10px 20px;
+            border: none;
+            cursor: pointer;
+            border-radius: 5px;
+            font-size: 18px;
+            transition: background-color 0.3s;
+        }
+
+        .subject-btn:hover {
+            background-color: #45a049;
+        }
+
         .link-section {
             display: none;
-            margin-top: 10px;
+            margin-top: 20px;
+            padding: 20px;
+            background-color: #fff;
+            border-radius: 5px;
+            box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
         }
+
+        .link-section h2 {
+            margin-top: 0;
+            color: #333;
+        }
+
+        ul {
+            list-style-type: none;
+            padding-left: 0;
+        }
+
+        ul li {
+            margin-bottom: 10px;
+        }
+
+        ul li a {
+            text-decoration: none;
+            color: #4CAF50;
+            font-size: 16px;
+            transition: color 0.3s;
+        }
+
+        ul li a:hover {
+            color: #45a049;
+        }
+
+        .icon {
+            margin-right: 8px;
+        }
+
     </style>
 </head>
 <body>
 
-    <h1>Subjects</h1>
+    <h1>Choose a Subject</h1>
     
-    <!-- Dropdown menu to select a subject -->
-    <label for="subject-select">Choose a subject:</label>
-    <select id="subject-select" onchange="toggleLinksFromDropdown()">
-        <option value="">Select Subject</option>
-    </select>
+    <div id="subjects">
+        <!-- Subject buttons will be dynamically created here -->
+    </div>
 
     <!-- Link sections will be generated here -->
-    
+
     <script>
         // Array of subjects with relative values (without subject name and .html)
         const subjectsData = {
@@ -43,33 +113,20 @@
             ]
         };
 
-        // Function to generate the subject dropdown dynamically
-        function generateSubjectDropdown() {
-            const subjectSelect = document.getElementById('subject-select');
+        // Function to generate the subject buttons dynamically
+        function generateSubjectButtons() {
+            const subjectsContainer = document.getElementById('subjects');
 
-            // Populate the dropdown with subjects
+            // Add a button for each subject
             Object.keys(subjectsData).forEach(subject => {
-                const option = document.createElement('option');
-                option.value = subject.toLowerCase();
-                option.innerText = subject;
-                subjectSelect.appendChild(option);
+                const button = document.createElement('button');
+                button.classList.add('subject-btn');
+                button.innerHTML = `<span class="icon">📚</span>${subject}`;
+                button.onclick = function() {
+                    toggleLinks(subject);
+                };
+                subjectsContainer.appendChild(button);
             });
-        }
-
-        // Function to generate the links when a subject is selected from the dropdown
-        function toggleLinksFromDropdown() {
-            const subject = document.getElementById('subject-select').value;
-            const sections = document.querySelectorAll('.link-section');
-            sections.forEach(section => {
-                section.style.display = 'none';
-            });
-
-            if (subject) {
-                const section = document.getElementById(subject);
-                if (section) {
-                    section.style.display = 'block';
-                }
-            }
         }
 
         // Function to generate link sections dynamically based on subjects data
@@ -97,8 +154,21 @@
             });
         }
 
-        // Initialize the dropdown and link sections
-        generateSubjectDropdown();
+        // Function to toggle visibility of subject links
+        function toggleLinks(subject) {
+            const sections = document.querySelectorAll('.link-section');
+            sections.forEach(section => {
+                section.style.display = 'none';
+            });
+
+            const section = document.getElementById(subject.toLowerCase());
+            if (section) {
+                section.style.display = 'block';
+            }
+        }
+
+        // Initialize the subject buttons and link sections
+        generateSubjectButtons();
         generateLinkSections();
     </script>
 
