--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Subjects and Links</title>
+    <title>BabyMath</title>
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -92,26 +92,10 @@
     </div>
 
     <!-- Link sections will be generated here -->
-
+    <script src="subjectData.js"></script>
     <script>
         // Array of subjects with relative values (without subject name and .html)
-        const subjectsData = {
-            Math: [
-                "lesson1",
-                "lesson2",
-                "lesson3"
-            ],
-            Science: [
-                "biology",
-                "chemistry",
-                "physics"
-            ],
-            History: [
-                "ancient",
-                "medieval",
-                "modern"
-            ]
-        };
+
 
         // Function to generate the subject buttons dynamically
         function generateSubjectButtons() {
