--- a/notes/index.html
+++ b/notes/index.html
@@ -2,7 +2,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Subjects and Links</title>
+  <title>Notes - BabyMath</title>
   <style>
     :root {
       --primary-color: #4a90e2;
