--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
       <a href="math-tricks/index.html"><i class="fas fa-calculator icon"></i> Math Tricks</a>
     </div>
     <div class="card">
-      <a href="notes/index.html"><i class="fas fa-sticky-note icon"></i> Notes</a>
+      <a href="notes/index1.html"><i class="fas fa-sticky-note icon"></i> Notes</a>
     </div>
     <div class="card">
       <a href="word-game/index.html"><i class="fas fa-gamepad icon"></i> Word Game</a>
