--- a/notes/index1.html
+++ b/notes/index1.html
@@ -46,12 +46,12 @@
     }
 
     #subjects {
-      display: flex;
-      flex-wrap: wrap;
-      justify-content: center;
+      display: grid;
+      grid-template-columns: repeat(auto-fill, minmax(180px, 1fr));
       gap: 18px;
       max-width: 900px;
       margin: auto;
+      padding: 10px;
     }
 
     .subject-btn {
@@ -65,7 +65,6 @@
       font-weight: 500;
       box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
       transition: all 0.3s ease-in-out;
-      flex: 1 1 160px;
       text-align: center;
     }
 
@@ -98,10 +97,12 @@
       list-style: none;
       padding-left: 0;
       margin: 20px 0;
+      display: grid;
+      grid-template-columns: repeat(auto-fill, minmax(180px, 1fr));
+      gap: 16px;
     }
 
     ul li {
-      margin-bottom: 14px;
       text-align: center;
     }
 
@@ -113,12 +114,17 @@
       display: inline-block;
       border-radius: 10px;
       font-weight: 500;
+      text-align: center;
+      background-color: white;
+      transition: all 0.3s ease-in-out;
+      box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
     }
 
     ul li a:hover {
       background-color: var(--primary-color);
       color: white;
       transform: scale(1.05);
+      box-shadow: 0 6px 14px rgba(0, 0, 0, 0.15);
     }
 
     .back-btn {
@@ -224,7 +230,7 @@
         backBtn.innerText = '← Back to Subjects';
         backBtn.onclick = () => {
           section.style.display = 'none';
-          document.getElementById('subjects').style.display = 'flex';
+          document.getElementById('subjects').style.display = 'grid';
         };
 
         section.appendChild(backBtn);
