--- a/notes/index1.html
+++ b/notes/index1.html
@@ -180,6 +180,7 @@
 
   <script>
     const subjectsData = {
+      English: ["Vocabulary"],
       Hindi: ["अलंकार","संज्ञा", "सर्वनाम", "समास", "कारक", "सन्धि-विच्छेद", "मुहावरे"],
       Math: ["Time and Work"]
     };
